name:                memory
version:             0.1.0.0
synopsis:            Backend memory bank
description:         Backend for a memory bank system
license:             Apache-2.0
license-file:        LICENSE
author:              David Farrell
maintainer:          David Farrell <shokku.ra@gmail.com>
copyright:           Copyright (C) 2016 David Farrell
category:            Data
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            https://github.com/shockkolate/memory.git

library
  exposed-modules:     Data.Memory
  build-depends:       base >=4.8 && <5.0
  default-language:    Haskell2010
  hs-source-dirs:      src
  ghc-options:         -W
  ghc-prof-options:    -fprof-auto-calls

test-suite example-basic
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  build-depends:       base >=4.8 && <5.0, containers >=0.5, text >=1.2, data-default >=0.5,
                       acid-state >=0.14, blaze-html >=0.8, happstack-foundation >=0.5, memory
  default-language:    Haskell2010
  hs-source-dirs:      examples/basic
  ghc-options:         -W
  ghc-prof-options:    -fprof-auto-calls
